set up ff service